# advent-of-code-2024

./: .gitignore  README.md
client/: Cargo.toml
client/src/: main.rs
puzzle/: Cargo.toml
puzzle/src/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs
