[package]
name = "puzzle"
version = "0.1.0"
edition = "2021"
default-run = "day05"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day01"
path = "src/day01.rs"

[dependencies]
regex = "1.11.1"
